Adding some more config updates.

--- a/ll_config.sample.ini
+++ b/ll_config.sample.ini
@@ -1,5 +1,10 @@
 [db]
-user = "db_user"
-pass = "db_pass"
-name = "db_name"
-host = "localhost"
+	user = "db_user"
+	pass = "db_pass"
+	name = "db_name"
+	host = "localhost"
+
+[paths]
+	root = "/path/to/vhost/public_html/"
+	views = "inc/views/"
+	templates = "inc/templates/"
