Adding DB_Jedi config info.

--- a/ll_config.sample.ini
+++ b/ll_config.sample.ini
@@ -8,3 +8,8 @@
 	root = "/path/to/vhost/public_html/"
 	views = "inc/views/"
 	templates = "inc/templates/"
+
+;db jedi does awesome changescript tracking.
+[db_jedi]
+	enabled = false
+	dir = "/path/to/change/scripts/"
